hotfix getFirst() unsupported on jdk20